src/objects/CIRT_Download__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CIRT Downloads</relationshipLabel>
        <relationshipName>CIRT_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AddressId</label>
        <referenceTo>Address_Information__c</referenceTo>
        <relationshipLabel>CIRT Downloads</relationshipLabel>
        <relationshipName>CIRT_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arraignment_Date__c</fullName>
        <label>Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attorney_Address_1__c</fullName>
        <formula>substitute(ContactId__r.Attorney_Old__r.Account.BillingStreet, &quot;,&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Address_2__c</fullName>
        <description>Used to create a blank field in the DOC File report</description>
        <formula>&quot;&quot;</formula>
        <label>Attorney Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Affiliation__c</fullName>
        <formula>IF (ISPICKVAL(ContactId__r.Intake_Case__r.Affiliation__c, &quot;Legal Aid&quot;), &quot;LAS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Bronx Defenders&quot;), &quot;BXD&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Brooklyn Defenders&quot;), &quot;BDS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;New York County Defenders&quot;), &quot;NYD&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Neighborhood Defenders of Harlem&quot;), &quot;NDS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Queens Law Associates&quot;), &quot;QLA&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;18-b&quot;), &quot;18B&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Private&quot;), &quot;PVT&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Not Entered&quot;), &quot;&quot;,
TEXT(ContactId__r.Intake_Case__r.Affiliation__c))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Consent__c</fullName>
        <formula>case( ContactId__r.Attorney_Consent__c,
&quot;Yes&quot;,  &quot;Yes&quot;,
&quot;No&quot;, &quot;No&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Consent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Attorney</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CIRT Downloads (Attorney)</relationshipLabel>
        <relationshipName>CIRT_Downloads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOOKCASENUMBER__c</fullName>
        <label>BOOKCASENUMBER</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOROUCH_COURT__c</fullName>
        <label>BOROUCH_COURT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bail_Amount__c</fullName>
        <label>Bail Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blank__c</fullName>
        <description>Used to create a blank field in the DOC File report</description>
        <formula>&quot;&quot;</formula>
        <label>Blank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borough_Court__c</fullName>
        <label>Borough Court</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGE_NO1__c</fullName>
        <label>CHARGE_NO1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGE_NO2__c</fullName>
        <label>CHARGE_NO2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGE_NO3__c</fullName>
        <label>CHARGE_NO3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRT_Eligibility_Date__c</fullName>
        <label>CIRT Eligibility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIRT_Eligible_Option__c</fullName>
        <label>CIRT Eligible Option</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRT_Ordered_By_Court__c</fullName>
        <formula>case(ContactId__r.Final_Outcome__c, &quot;Accepted for Intake&quot;, &quot;Yes&quot;,
&quot;&quot;, &quot;&quot;,
&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIRT Ordered By Court</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJASCORE__c</fullName>
        <label>CJASCORE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJA_Score__c</fullName>
        <label>CJA Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Charge_s_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Charge(s) Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Consent__c</fullName>
        <label>Client Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CIRT Downloads</relationshipLabel>
        <relationshipName>CIRT_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Date_Id__c</fullName>
        <label>Court Date Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_CIRT_APPROVAL__c</fullName>
        <formula>case( text(ContactId__r.District_Attorney_s_Consent__c),

&quot;Yes&quot;, &quot;Yes&quot;,
&quot;No&quot;, &quot;No&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA_CIRT_APPROVAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOCKET__c</fullName>
        <label>DOCKET</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCSCORE__c</fullName>
        <label>DOCSCORE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOC_Score__c</fullName>
        <label>DOC Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>Firstname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inmate_CIRT_Option1__c</fullName>
        <formula>case( ContactId__r.Mandate_Type__c,
&quot;Felony ATD&quot;, &quot;ATD – Felony&quot; ,
&quot;Felony ATI&quot;, &quot;ATI – Felony&quot;,
&quot;Misdemeanor ATD&quot;, &quot;ATD – Misdemeanor&quot; ,
&quot;Misdemeanor ATI&quot;, &quot;ATI – Misdemeanor&quot; ,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inmate CIRT Option1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inmate_CIRT_Option2__c</fullName>
        <formula>if(ContactId__r.Current_Track__c = ContactId__r.Mandate_Type__c, &quot;&quot;, case(ContactId__r.Current_Track__c,
&quot;Felony ATD&quot;, &quot;ATD – Felony&quot;,
&quot;Felony ATI&quot;, &quot;ATI – Felony&quot;,
&quot;Misdemeanor ATD&quot;, &quot;ATD – Misdemeanor&quot;,
&quot;Misdemeanor ATI&quot;, &quot;ATI – Misdemeanor&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inmate CIRT Option2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inmate_CIRT_Option3__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inmate CIRT Option3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOCJ_RA_SCORE__c</fullName>
        <label>MOCJ RA SCORE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Designation__c</fullName>
        <label>M Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/Uncertain</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middlename__c</fullName>
        <label>Middlename</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NYSID__c</fullName>
        <label>NYSID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Docket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Docket?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Court_Date__c</fullName>
        <label>Next Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Denial_Reasons__c</fullName>
        <formula>if( ContactId__r.Final_Outcome__c = &quot;Accepted for Intake&quot;, &quot;&quot;, ContactId__r.Final_Outcome__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Denial Reasons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Ordered__c</fullName>
        <formula>case( ContactId__r.Mandate_Type__c, 
&quot;Felony ATD&quot;, &quot;ATD – Felony&quot; , 
&quot;Felony ATI&quot;, &quot;ATI – Felony&quot;, 
&quot;Misdemeanor ATD&quot;, &quot;ATD – Misdemeanor&quot; , 
&quot;Misdemeanor ATI&quot;, &quot;ATI – Misdemeanor&quot; , 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Ordered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>ReferralSource</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <label>ReferralType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>18B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney&apos;s Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Normally this would be the created date, but need this because of Brooklyn CIRT migration to capture actual created date, not migrated date</description>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VersionDateTime__c</fullName>
        <label>VersionDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentStatus__c</fullName>
        <label>currentStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docketid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>docketid</label>
        <referenceTo>Case_Information__c</referenceTo>
        <relationshipLabel>CIRT Downloads</relationshipLabel>
        <relationshipName>CIRT_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CIRT Download</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ContactId__c</columns>
        <columns>DOCKET__c</columns>
        <columns>NYSID__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>Status__c</columns>
        <columns>Next_Court_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CIRT-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIRT Downloads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>